移除排行榜功能相关代码
