# backend/src/main/java/com/kabu/admin/stock/dto/StockPriceChangeRankingQueryRequest.java
@@ -1,11 +1,0 @@
-package com.kabu.admin.stock.dto;
-
-public record StockPriceChangeRankingQueryRequest(
-    String startDate,
-    String endDate,
-    String changeType,
-    String changePercent,
-    Integer page,
-    Integer size
-) {
-}
